WexGit/Wex_DX/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Approval_Channel__c.field-meta.xml
<CustomField>
    <fullName>Approval_Channel__c</fullName>
    <description>Used for managing CPQ approvals</description>
    <formula>TEXT( SBQQ__Product__r.Approval_Channel__c )</formula>
    <inlineHelpText>Used for managing CPQ approvals
Large Fleet = Bernie Kavanaugh
Major Oil = Brian Fournier
Small to Medium Business = Jay Collins</inlineHelpText>
    <label>Approval Channel</label>
    <type>Text</type>
</CustomField>