WexGit/Wex_DX/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <formula>SBQQ__Product__r.Details__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Details</label>
    <type>Text</type>
</CustomField>