WexGit/Wex_DX/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Discount_Amount__c</fullName>
    <formula>SBQQ__ListPrice__c -  Requested_Price__c</formula>
    <label>Discount Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>