WexGit/Wex_DX/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Discount_percent__c.field-meta.xml
<CustomField>
    <fullName>Discount_percent__c</fullName>
    <formula>(SBQQ__ListPrice__c - Requested_Price__c) /  SBQQ__ListPrice__c</formula>
    <label>Discount %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>