WexGit/Wex_DX/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Early_Pay_Rebate_No_Selection__c.field-meta.xml
<CustomField>
    <fullName>Early_Pay_Rebate_No_Selection__c</fullName>
    <formula>/*IF( SBQQ__Product__r.Name = &apos;Early Pay Rebate&apos; &amp;&amp; ISBLANK(TEXT(Early_Pay_Selection__c)), true, false)*/
IF( BEGINS( SBQQ__Product__r.Name, &apos;Early Pay Rebate&apos;) &amp;&amp; ISBLANK(TEXT(Early_Pay_Selection__c)), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Early Pay Rebate No Selection</label>
    <type>Checkbox</type>
</CustomField>