WexGit/Wex_DX/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Early_Pay_Selection__c.field-meta.xml
<CustomField>
    <fullName>Early_Pay_Selection__c</fullName>
    <label>Early Pay Selection</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Line_of_Business__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily Billing and Daily Payment - 17 basis points (0.17%)</fullName>
            </value>
            <value>
                <fullName>Tri Monthly Billing and Payment - 15 basis points (0.15%)</fullName>
            </value>
            <value>
                <fullName>Weekly Billing/Weekly Payment - 13 basis points (0.13%)</fullName>
            </value>
            <value>
                <fullName>Weekly Billing/14 Day Payment - 8 basis points (0.08%)</fullName>
            </value>
            <value>
                <fullName>Monthly Payment (5th of the month) - 9 basis points (0.09%)</fullName>
            </value>
            <value>
                <fullName>Monthly Payment (10th of the month) - 6 basis points (0.06%)</fullName>
            </value>
            <value>
                <fullName>5 days post invoice close date - 9 basis points (0.09%)</fullName>
            </value>
            <value>
                <fullName>10 days post invoice close date - 6 basis points (0.06%)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>