WexGit/Wex_DX/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Fleet_Card_Type__c.field-meta.xml
<CustomField>
    <fullName>Fleet_Card_Type__c</fullName>
    <formula>TEXT(  SBQQ__Product__r.Fleet_Card_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fleet Card Type</label>
    <type>Text</type>
</CustomField>