WexGit/Wex_DX/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Free_Draws__c.field-meta.xml
<CustomField>
    <fullName>Free_Draws__c</fullName>
    <label># Free Draws</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>