WexGit/Wex_DX/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Free_Draws_Needed__c.field-meta.xml
<CustomField>
    <fullName>Free_Draws_Needed__c</fullName>
    <formula>Free_Draws__c = 0 &amp;&amp;
OR(
SBQQ__Product__r.Name = &apos;Non-Payroll # Free SmartFunds Draws&apos;,
SBQQ__Product__r.Name = &apos;MoneyCode Additional Uses  &apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># Free Draws Needed</label>
    <type>Checkbox</type>
</CustomField>