WexGit/Wex_DX/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Free_Draws_Not_Blank__c.field-meta.xml
<CustomField>
    <fullName>Free_Draws_Not_Blank__c</fullName>
    <formula>IF(Free_Draws__c&gt;0, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># Free Draws Not Blank</label>
    <type>Checkbox</type>
</CustomField>