WexGit/Wex_DX/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Free_Draws_Text__c.field-meta.xml
<CustomField>
    <fullName>Free_Draws_Text__c</fullName>
    <formula>IF( Free_Draws__c&gt;0,&apos;# of Free Draws:  &apos;+TEXT(Free_Draws__c), null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># Free Draws</label>
    <type>Text</type>
</CustomField>