WexGit/Wex_DX/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Gallons__c.field-meta.xml
<CustomField>
    <fullName>Gallons__c</fullName>
    <label>Gallons</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>