WexGit/Wex_DX/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Line_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Line_of_Business__c</fullName>
    <description>Target of a Price Rule to set dependent picklist values since QLE Standard Line Item Drawer fields do not support restricting picklist values based on Record Type</description>
    <label>Line of Business</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EFS and Fleet</fullName>
            </value>
            <value>
                <fullName>Shell</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>