WexGit/Wex_DX/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Max_Spend__c.field-meta.xml
<CustomField>
    <fullName>Max_Spend__c</fullName>
    <label>Max Spend</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>