WexGit/Wex_DX/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Monthly_Gallons__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Gallons__c</fullName>
    <formula>SBQQ__Quote__r.Monthly_Gallons__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Gallons</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>