WexGit/Wex_DX/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Net_Price__c.field-meta.xml
<CustomField>
    <fullName>Net_Price__c</fullName>
    <formula>IF (ISNULL(Requested_Price__c), SBQQ__ListPrice__c, Requested_Price__c)</formula>
    <label>Net Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>