WexGit/Wex_DX/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Net_Total__c.field-meta.xml
<CustomField>
    <fullName>Net_Total__c</fullName>
    <formula>IF (ISBLANK ( Requested_Price__c), SBQQ__Quantity__c * SBQQ__ListPrice__c, SBQQ__Quantity__c *  Requested_Price__c)</formula>
    <label>Net Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>