WexGit/Wex_DX/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Price_Difference__c.field-meta.xml
<CustomField>
    <fullName>Price_Difference__c</fullName>
    <formula>SBQQ__ListPrice__c -  Net_Price__c</formula>
    <label>Price Difference</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>