WexGit/Wex_DX/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Rebate_Citgo__c.field-meta.xml
<CustomField>
    <fullName>Rebate_Citgo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rebate - Citgo</label>
    <type>Checkbox</type>
</CustomField>