WexGit/Wex_DX/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Rebate_Early_Pay__c.field-meta.xml
<CustomField>
    <fullName>Rebate_Early_Pay__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rebate - Early Pay</label>
    <type>Checkbox</type>
</CustomField>