WexGit/Wex_DX/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Rebate_Exxon__c.field-meta.xml
<CustomField>
    <fullName>Rebate_Exxon__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rebate - Exxon</label>
    <type>Checkbox</type>
</CustomField>