WexGit/Wex_DX/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Rebate_Phillips_66_Conoco_76__c.field-meta.xml
<CustomField>
    <fullName>Rebate_Phillips_66_Conoco_76__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rebate - Phillips 66, Conoco, 76</label>
    <type>Checkbox</type>
</CustomField>