WexGit/Wex_DX/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Rebate_Sheetz_Universal__c.field-meta.xml
<CustomField>
    <fullName>Rebate_Sheetz_Universal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rebate - Sheetz Universal</label>
    <type>Checkbox</type>
</CustomField>