WexGit/Wex_DX/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Rebate_Standard_Out_of_Network__c.field-meta.xml
<CustomField>
    <fullName>Rebate_Standard_Out_of_Network__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rebate - Standard Out of Network</label>
    <type>Checkbox</type>
</CustomField>