WexGit/Wex_DX/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Requested_Price__c.field-meta.xml
<CustomField>
    <fullName>Requested_Price__c</fullName>
    <inlineHelpText>Price to be offered instead of List Price</inlineHelpText>
    <label>Requested Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>