WexGit/Wex_DX/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Requested_Price_Formula__c.field-meta.xml
<CustomField>
    <fullName>Requested_Price_Formula__c</fullName>
    <formula>Requested_Price__c</formula>
    <label>Requested Price Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>